test/pass/dynaload/generic_restore.lily
class Test[A, B]
{
    Some(1).is_none()

    define abc(key: A): Test[A, B]
    {
        return self
    }
}

